@@ -27,9 +27,6 @@
 #define SC_SPELLER_H 1
 
 
-gint speller_check_word(GeanyDocument *doc, gint line_number, const gchar *word,
-					    gint start_pos, gint end_pos);
-
 gint speller_process_line(GeanyDocument *doc, gint line_number, const gchar *line);
 
 void speller_check_document(GeanyDocument *doc);
